Starting to add touch, cleaning up a little

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <!-- really important: https://stackoverflow.com/questions/2588181/canvas-is-stretched-when-using-css-but-normal-with-width-height-properties -->
-    <canvas width="800" height="500" id="drawing" onmousedown="startDrawing(event)"></canvas>
+    <!-- Really important: https://stackoverflow.com/questions/2588181/canvas-is-stretched-when-using-css-but-normal-with-width-height-properties -->
+    <canvas width="800" height="500" id="drawing"></canvas>
 </body>
 </html>
