--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <script src="index.js"></script>
 </head>
 <body>
+<main>
+    <h1>Drawing Canvas</h1>
     <!-- Really important: https://stackoverflow.com/questions/2588181/canvas-is-stretched-when-using-css-but-normal-with-width-height-properties -->
     <canvas width="800" height="500" id="drawing"></canvas>
+</main>
 </body>
 </html>
